Subida lista para cloudflare

--- a/src/content/projects/congreso.mdx
+++ b/src/content/projects/congreso.mdx
@@ -1,15 +1,30 @@
+---
+title: "WebApp Congreso UNAH"
+description: "Plataforma web para la gestión del Congreso de Innovación 2025."
+imagen: "Congreso/Landing page.png"
+href: "/congreso" 
+
+imagenes:
+  - "/assets/Congreso/como inscribirse.png"
+  - "/assets/Congreso/conferencias.png"
+  - "/assets/Congreso/creacion conferencia.png"
+  - "/assets/Congreso/Ponentes.png"
+
+repos: []
+---
+
 # 🌍 WebApp Congreso UNAH
 
 ## Descripción
-Plataforma web para la **gestión del Congreso de Innovación 2025**, con:
-- 📌 **Registro de usuarios** y autenticación segura.
-- 🎟️ **Validación de asistencia mediante QR**.
-- 📅 **Administración de eventos en tiempo real**.
+Plataforma web para gestionar el **Congreso de Innovación 2025**, con:  
+- 📌 **Registro de usuarios** y autenticación segura.  
+- 🎟️ **Validación de asistencia mediante QR**.  
+- 📅 **Administración de eventos en tiempo real**.  
 
 ## Tecnologías utilizadas
-- 🟢 **Node.js**
-- 🔵 **TypeScript**
-- 🟣 **React**
-- 🟡 **Firebase**
+- 🟢 **Node.js**  
+- 🔵 **TypeScript**  
+- 🟣 **React**  
+- 🟡 **Firebase**  
 
-[🔗 Ver Proyecto](https://tudominio.com/congreso)
+[🔗 Ver Proyecto](https://congresoinnovacionunah2025.com)
