--- a/src/content/projects/nubira.mdx
+++ b/src/content/projects/nubira.mdx
@@ -1,15 +1,30 @@
+---
+title: "Mercadito NUBIRA"
+description: "Sistema web para comerciantes con gestión de inventarios, ventas y reportes."
+imagen: "/Nubira/Landing page.png"
+href: "/nubira"
+
+imagenes:
+  - "/assets/Nubira/Dashboard.jpg"
+  - "/assets/Nubira/planes.png"
+  - "/assets/Nubira/Ventas.png"
+
+repos: 
+    - frontend: "https://github.com/ElderSolano/Nubira-.git"
+    - backend: "https://github.com/sosa22001/industria-backend.git"
+
+---
+
 # 🛒 Mercadito NUBIRA
 
 ## Descripción
-Sistema web para **comerciantes** que permite:
-- 📦 **Gestión de inventarios** y control de stock.
-- 💰 **Registro de ventas** y facturación.
-- 📊 **Reportes de negocio** con análisis de datos.
+Sistema web diseñado para **comerciantes**, con funcionalidades como:  
+- 📦 **Gestión de inventarios** y control de stock.  
+- 💰 **Registro de ventas** y facturación automatizada.  
+- 📊 **Reportes de negocio** con análisis de datos en tiempo real.  
 
 ## Tecnologías utilizadas
-- 🔵 **TypeScript**
-- 🟢 **Node.js + Express**
-- 🟣 **SQL Server**
-- 🟡 **React + Firebase Storage**
-
-[🔗 Ver Proyecto](https://tudominio.com/nubira)
+- 🔵 **TypeScript**  
+- 🟢 **Node.js + Express**  
+- 🟣 **SQL Server**  
+- 🟡 **React + Firebase Storage**  
