--- a/src/content/projects/sistema-unah.mdx
+++ b/src/content/projects/sistema-unah.mdx
@@ -1,15 +1,30 @@
+---
+title: "Sistema de la UNAH"
+description: "Plataforma académica para la gestión de estudiantes, docentes y matrícula."
+imagen: "/Sistema UNAH/Bienvenido.png"
+href: "/sistemaUNAH"
+
+imagenes:
+  - "/assets/Sistema UNAH/Bienvenido.png"
+  - "/assets/Sistema UNAH/Clases.jpg"
+  - "/assets/Sistema UNAH/Evaluacion docente.jpg"
+  - "/assets/Sistema UNAH/Registro.jpg"
+  - "/assets/Sistema UNAH/Solicitud cancelar clases.jpg"
+  - "/assets/Sistema UNAH/Perfil trimestral.png"
+---
+
 # 🏫 Sistema de la UNAH
 
 ## Descripción
-Plataforma académica para la **gestión de estudiantes**, con:
-- 📖 **Proceso de matrícula automatizado**.
-- 👩‍🏫 **Administración de docentes** y asignaturas.
-- 🔐 **Sistema de roles y permisos** para mayor seguridad.
+Plataforma académica diseñada para la **gestión de estudiantes y docentes**, con funcionalidades como:  
+- 📖 **Proceso de matrícula automatizado** para agilizar inscripciones.  
+- 👩‍🏫 **Administración de docentes y asignaturas** con gestión eficiente.  
+- 🔐 **Sistema de roles y permisos** para garantizar seguridad.  
 
 ## Tecnologías utilizadas
-- 🟢 **Node.js**
-- 🔵 **TypeScript**
-- 🟣 **SQL Server**
-- 🟡 **React + Tailwind CSS**
+- 🟢 **Node.js**  
+- 🔵 **TypeScript**  
+- 🟣 **SQL Server**  
+- 🟡 **React + Tailwind CSS**  
 
 [🔗 Ver Proyecto](https://tudominio.com/sistemaUNAH)
