PArte de proyectos actualizada

--- a/src/content/projects/clon-netflix.mdx
+++ b/src/content/projects/clon-netflix.mdx
@@ -16,24 +16,23 @@ repos:
   - backend: "https://github.com/issac-326/Netflix_spring-boot.git"
 ---
 
-### Descripción
+## Descripción
 
-Aplicación inspirada en **Netflix**, con exploración de **contenido** por categorías, perfiles de usuario personalizados, favoritos y lista de reproducción. Login y registro de los usuarios.
-
-### Mi Rol
+Aplicación inspirada en **Netflix**, con exploración de **contenido** por categorías, perfiles de usuario personalizados, favoritos y lista de reproducción. Login y registro de los usuarios.  
+## Mi Rol
 
 Participé en el diseño de las tablas para una estructura eficiente. También Coordiné la organización del equipo de **4 personas** para una mejor distribución de tareas. Del lado del frontend Contribuí en el desarrollo de diversas funcionalidades clave como el login, el renderizado de contenido integrando con la API las funcionalidades a mostrar como la lógica para la gestión de múltiples perfiles por usuario y la creación de listas personalizadas.
 
 ### 🚀 Desafíos y Soluciones
 
-- 🛠️ **Dado que era un proyecto de una clase, el tiempo de entrega era de 2 semanas y media, el cual se logró.**  
-- 🔄 **Manejo de estados en frontend**, para actualizar en tiempo real la interfaz según el usuario que se logueara.  
-- 📡 **Consumo de API**, haciendo una integración correcta entre el backend, base de datos y frontend.  
-- 🔍 **Implementación de búsqueda y filtrado**, de contenido para mejorar la experiencia del usuario.  
-- 🔍 **Investigación sobre cómo funcionan los procesos de pago con tarjetas**, en el caso de Netflix para compra de cuentas (No implementado).
+- 🛠️ Dado que era un proyecto de una clase, el tiempo de entrega era de 2 semanas y media, el cual se logró.  
+- 🔄 Manejo de estados en frontend, para actualizar en tiempo real la interfaz según el usuario que se logueara.  
+- 📡 Consumo de API, haciendo una integración correcta entre el backend, base de datos y frontend.  
+- 🔍 Implementación de búsqueda y filtrado, de contenido para mejorar la experiencia del usuario.  
+- 🔍 Investigación sobre cómo funcionan los procesos de pago con tarjetas, en el caso de Netflix para compra de cuentas (No implementado).
 
 ## Tecnologías utilizadas
 
-- 🟢 **SpringBoot**
-- 🔴 **MySQL**
-- 🔵 **Laravel + PHP**
+- 🟢 SpringBoot
+- 🔴 MySQL
+- 🔵 Laravel + PHP
