--- a/src/content/projects/congreso.mdx
+++ b/src/content/projects/congreso.mdx
@@ -13,18 +13,15 @@ imagenes:
 repos: []
 ---
 
-# 🌍 WebApp Congreso UNAH
+# 🖥️ WebApp Congreso UNAH
 
 ## Descripción
-Plataforma web para gestionar el **Congreso de Innovación 2025**, con:  
-- 📌 **Registro de usuarios** y autenticación segura.  
-- 🎟️ **Validación de asistencia mediante QR**.  
-- 📅 **Administración de eventos en tiempo real**.  
+Desarrollo de una plataforma web para la gestión del Congreso de Innovación 2025, un evento con ponentes nacionales e internacionales. La WebApp facilita la administración de conferencias, talleres, usuarios y validación de asistencia mediante QR para un estimado de 500 usuarios. 
 
 ## Tecnologías utilizadas
 - 🟢 **Node.js**  
 - 🔵 **TypeScript**  
-- 🟣 **React**  
-- 🟡 **Firebase**  
+- 🟣 **Next.JS**  
+- 🟡 **Supabase**  
 
 [🔗 Ver Proyecto](https://congresoinnovacionunah2025.com)
