--- a/src/content/projects/nubira.mdx
+++ b/src/content/projects/nubira.mdx
@@ -23,8 +23,17 @@ Sistema web diseñado para **comerciantes**, con funcionalidades como:
 - 💰 **Registro de ventas** y facturación automatizada.  
 - 📊 **Reportes de negocio** con análisis de datos en tiempo real.  
 
+## Mi rol
+
+- **Frontend:** Desarrollo de la interfaz de usuario en módulos clave como el dashboard, la parte de ventas y facturación. Y partes fundamentales del inventario como las fichas de productos y fichas de ventas, asegurando una experiencia fluida e intuitiva.  
+- **Backend:** Implementación de la lógica del servidor y las API necesarias para el funcionamiento del sistema, en los módulos mencionados en el frontend.  
+- **Base de datos:** Diseño y estructuración de la base de datos en su totalidad. 
+- **Diseño e identidad visual:** Creación de la imagen corporativa, incluyendo el **logo** y el diseño en **Figma**.  
+- **Gestión de tareas:** Asignación de responsabilidades dentro del equipo y aseguramiento del cumplimiento de los plazos.  
+
+Este proyecto me permitió desarrollar habilidades tanto técnicas como de **gestión de equipos**, asegurando la alineación entre desarrollo y diseño para crear un producto sólido y bien estructurado. 🚀
+
 ## Tecnologías utilizadas
-- 🔵 **TypeScript**  
-- 🟢 **Node.js + Express**  
-- 🟣 **SQL Server**  
-- 🟡 **React + Firebase Storage**  
+- 🔵 **Laravel + PHP**  
+- 🟢 **Vue.JS**  
+- 🟣 **MySQL**  
