--- a/src/content/projects/sistema-unah.mdx
+++ b/src/content/projects/sistema-unah.mdx
@@ -17,14 +17,29 @@ imagenes:
 
 ## Descripción
 Plataforma académica diseñada para la **gestión de estudiantes y docentes**, con funcionalidades como:  
-- 📖 **Proceso de matrícula automatizado** para agilizar inscripciones.  
-- 👩‍🏫 **Administración de docentes y asignaturas** con gestión eficiente.  
-- 🔐 **Sistema de roles y permisos** para garantizar seguridad.  
+- 📖 **Proceso de matrícula.**
+- 👩‍🏫 **Inscripción al sistema de admisiones de la UNAH.**  
+- 🔐 **Módulos para los estudiantes, docentes, coordinadores académicos, jefes de departamento.**  
+
+## Mi Rol  
+En este proyecto, fui asignado como Scrum Master, además de trabajar activamente en el desarrollo del backend y el diseño de la base de datos.  
+
+## Responsabilidades  
+- **🚀 Gestión del equipo:** Facilitación de reuniones, planificación de sprints y seguimiento del progreso mediante un diagrama de Gantt.  
+- 🛠 **Desarrollo backend**: Implementación de la lógica de negocio, APIs y autenticación de usuarios.  
+- 🗄 **Base de datos:** Diseño de las tablas, relaciones y llenado de datos esenciales para el sistema.  
+- 🔗 **Coordinación técnica:** Asegurar que las integraciones entre frontend y backend funcionaran correctamente.    
+
+Este rol me permitió desarrollar habilidades tanto en gestión ágil como en programación y arquitectura de software, asegurando que el equipo cumpliera con los objetivos de cada sprint de manera eficiente.  
+
+## Desafíos  
+Durante el desarrollo del proyecto, enfrenté varios retos que requirieron aprendizaje y adaptación:  
+
+- 📧 **Envío de correos electrónicos:** Nunca antes había implementado esta funcionalidad, por lo que tuve que investigar sobre **Nodemailer** y protocolos de correo electrónico para integrarlo correctamente.  
+- 💬 **Sistema de chat en tiempo real:** La funcionalidad de chat entre estudiantes se implementó con **Socket.io**, algo totalmente nuevo para mí. Esto implicó leer documentación, hacer pruebas y optimizar la comunicación en tiempo real.
 
 ## Tecnologías utilizadas
-- 🟢 **Node.js**  
-- 🔵 **TypeScript**  
-- 🟣 **SQL Server**  
-- 🟡 **React + Tailwind CSS**  
-
-[🔗 Ver Proyecto](https://tudominio.com/sistemaUNAH)
+- 🟢 Node.js 
+- 🔵 TypeScript
+- 🟣 SQL Server
+- 🟡 React + Tailwind CSS
