--- a/src/content/projects/congreso.mdx
+++ b/src/content/projects/congreso.mdx
@@ -18,6 +18,27 @@ repos: []
 ## Descripción
 Desarrollo de una plataforma web para la gestión del Congreso de Innovación 2025, un evento con ponentes nacionales e internacionales. La WebApp facilita la administración de conferencias, talleres, usuarios y validación de asistencia mediante QR para un estimado de 500 usuarios. 
 
+## 🎯 Mi Rol en el Proyecto  
+
+En el **Congreso de Innovación UNAH 2025**, fui responsable del desarrollo y gestión del **backend**, asegurando el correcto funcionamiento de la plataforma. Mis principales contribuciones fueron:  
+
+- 🔧 **Liderar el desarrollo backend**, coordinando su implementación y asegurando buenas prácticas.  
+- 🔐 **Gestión de usuarios:** Desarrollo del **registro y login de estudiantes** con autenticación segura.  
+- 📅 **Módulo de conferencias:** Creación de funcionalidades para la **organización e inscripción a conferencias**.  
+- 📂 **Gestión de archivos:** Implementación de la **subida de documentos** utilizando la API de **Google Drive**.  
+- 🏛️ **Diseño y gestión de la base de datos**
+- 🚀 **Despliegue y hosting** en vercel y GoDaddy.
+
+Mi enfoque no solo fue técnico, sino también estratégico, garantizando que cada funcionalidad cumpliera con los requisitos del proyecto y brindara una buena experiencia a los usuarios.  
+
+## ⚡ Desafíos  
+
+Durante el desarrollo del **Congreso de Innovación UNAH 2025**, enfrenté varios retos que me ayudaron a crecer profesionalmente:  
+
+- 📈 **Escalabilidad del sistema:** Nunca antes había trabajado en un proyecto de gran escala, y este estaba diseñado para **al menos 500 estudiantes**. Fue un desafío garantizar que el backend pudiera manejar múltiples usuarios concurrentes sin afectar el rendimiento.  
+- ⏳ **Tiempo limitado:** El plazo de desarrollo era corto, lo que nos exigió trabajar de manera eficiente y organizada para **entregar el proyecto a tiempo sin comprometer su funcionalidad**.  
+A pesar de estos desafíos, logramos cumplir con los objetivos, entregando un sistema funcional y estable en el tiempo establecido. 🚀  
+
 ## Tecnologías utilizadas
 - 🟢 **Node.js**  
 - 🔵 **TypeScript**  
