--- a/src/content/projects/congreso.mdx
+++ b/src/content/projects/congreso.mdx
@@ -1,5 +1,5 @@
 ---
-title: "WebApp Congreso UNAH"
+title: "🖥️ WebApp Congreso UNAH"
 description: "Plataforma web para la gestión del Congreso de Innovación 2025."
 imagen: "Congreso/Landing page.png"
 href: "/congreso" 
@@ -10,10 +10,7 @@ imagenes:
   - "/assets/Congreso/creacion conferencia.png"
   - "/assets/Congreso/Ponentes.png"
 
-repos: []
 ---
-
-# 🖥️ WebApp Congreso UNAH
 
 ## Descripción
 Desarrollo de una plataforma web para la gestión del Congreso de Innovación 2025, un evento con ponentes nacionales e internacionales. La WebApp facilita la administración de conferencias, talleres, usuarios y validación de asistencia mediante QR para un estimado de 500 usuarios. 
