--- a/src/content/projects/nubira.mdx
+++ b/src/content/projects/nubira.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Mercadito NUBIRA"
+title: "🛒 Mercadito NUBIRA"
 description: "Sistema web para comerciantes con gestión de inventarios, ventas y reportes."
 imagen: "/Nubira/Landing page.png"
 href: "/nubira"
@@ -9,13 +9,7 @@ imagenes:
   - "/assets/Nubira/planes.png"
   - "/assets/Nubira/Ventas.png"
 
-repos: 
-    - frontend: "https://github.com/ElderSolano/Nubira-.git"
-    - backend: "https://github.com/sosa22001/industria-backend.git"
-
 ---
-
-# 🛒 Mercadito NUBIRA
 
 ## Descripción
 Sistema web diseñado para **comerciantes**, con funcionalidades como:  
