--- a/src/content/projects/sistema-unah.mdx
+++ b/src/content/projects/sistema-unah.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Sistema de la UNAH"
+title: "🏫 Sistema de la UNAH"
 description: "Plataforma académica para la gestión de estudiantes, docentes y matrícula."
 imagen: "/Sistema UNAH/Bienvenido.png"
 href: "/sistemaUNAH"
@@ -12,8 +12,6 @@ imagenes:
   - "/assets/Sistema UNAH/Solicitud cancelar clases.jpg"
   - "/assets/Sistema UNAH/Perfil trimestral.png"
 ---
-
-# 🏫 Sistema de la UNAH
 
 ## Descripción
 Plataforma académica diseñada para la **gestión de estudiantes y docentes**, con funcionalidades como:  
