--- a/src/content/projects/Poke-reports.mdx
+++ b/src/content/projects/Poke-reports.mdx
@@ -43,17 +43,17 @@ El proyecto sigue una arquitectura distribuida basada en eventos:
 
 ### ✅ Muestreo Aleatorio
 
-- El usuario puede especificar un número máximo de registros (`sample_size`).
+- El usuario puede especificar un número máximo de registros (sample_size).
 - Si se define, la Azure Function usa `random.sample()` para limitar el tamaño del reporte de forma aleatoria y eficiente.
 
 ---
 
 ## 🧩 Desafíos y Soluciones
 
-- 🔄 **Integración entre FastAPI y Azure Function:** Resolver el traspaso de parámetros como `sample_size` entre capas.
+- 🔄 **Integración entre FastAPI y Azure Function:** Resolver el traspaso de parámetros como sample_size entre capas.
 - ⚠️ **Errores de red WSL2 con Docker y Azure CLI:** Se resolvieron con reinicios controlados, reseteo de redes y uso de `SCOPE_IDENTITY()` en SQL.
-- 🧠 **Validación de tipos entre JSON, SQL y Python:** Se usaron `Pydantic`, conversión explícita a `int`, y logs para evitar errores silenciosos.
-- 📤 **Autenticación de subida a Blob Storage:** Se gestionó con credenciales almacenadas en `.env` y seguras con Azure Portal.
+- 🧠 **Validación de tipos entre JSON, SQL y Python:** Se usaron Pydantic, conversión explícita a int, y logs para evitar errores silenciosos.
+- 📤 **Autenticación de subida a Blob Storage:** Se gestionó con credenciales almacenadas en .env y seguras con Azure Portal.
 
 ---
 
