Azure funcion nombre corregido

--- a/src/content/projects/Poke-reports.mdx
+++ b/src/content/projects/Poke-reports.mdx
@@ -68,7 +68,7 @@ El proyecto sigue una arquitectura distribuida basada en eventos:
 - 🧠 **Backend FastAPI**  
   [👉 GitHub](https://github.com/sosa22001/poke.queue.api.git)
 
-- ⚙️ **Azure Function (Worker)**  
+- ⚙️ \*_Azure Function_  
   [👉 GitHub](https://github.com/sosa22001/poke.functionApp.git)
 
 - 🛢 **Scripts SQL**  
