Arreglos del objetivo

--- a/src/content/projects/Poke-reports.mdx
+++ b/src/content/projects/Poke-reports.mdx
@@ -12,7 +12,7 @@ imagenes:
 
 ## Descripción General
 
-Este proyecto es una solución continuada a un proyecto, en el cual tuve que llevar a práctica los conceptos antes visto sobre Queue Storage, Serverles para tener un proceso asincrono sobre generación de reportes enriquecidos de Pokemones y almacenarlos automaticamente en la nube en este caso en Azure.
+Este proyecto es una solución continuada a ul proyecto Generador de reportes, en el cual tuve que llevar a práctica los conceptos antes visto en clase sobre Queue Storage, Serverles y Blob Storage, ya que por el momento manejaba solo los conceptos a nivel teórico, era hora de llevarlo a la práctica y en este caso este sería la versión 2 del proyecto. El objetivo de esta asignación es extender y adaptar esta aplicación base, añadiendo nuevas funcionalidades y demostrar mi habilidad para modificar y mejorar un sistema existente que debe permanecer desplegado y funcional en Azure.
 
 ---
 
